--- a/clase-juegos.ipynb
+++ b/clase-juegos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,20 +19,23 @@
     "        print(\"Introduce una de las siguientes opciones:\")\n",
     "        print('''        1 --> Si quieres jugar al AHORCADO\n",
     "        2 --> si quieres jugar a PIEDRA, PAPEL, TIJERA\n",
-    "        3 --> si quieres jugar a PREGUNTAS Y RESPUESTAS ''')\n",
+    "        3 --> si quieres jugar a PREGUNTAS Y RESPUESTAS \n",
+    "        4 --> si quieres jugar al TRES EN RAYA''')\n",
     "    \n",
     "        try:\n",
-    "            opcion = int(input(\"¿A qué juego quieres jugar?: 1, 2 o 3\"))      \n",
+    "            opcion = int(input(\"¿A qué juego quieres jugar?: 1, 2, 3 o 4\"))      \n",
     "            if opcion == 1:\n",
     "                self.ahorcado()\n",
     "            elif opcion == 2:\n",
     "                self.p_p_t()\n",
     "            elif opcion == 3:\n",
     "                self.geografia()\n",
+    "            elif opcion == 4:\n",
+    "                self.tres_en_raya()\n",
     "            else:\n",
-    "                print(\"opcion no válida, introduce un número del 1 al 3\")\n",
+    "                print(\"opcion no válida, introduce un número del 1 al 4\")\n",
     "        except ValueError:\n",
-    "            print(\"formato incorrecto, introduce un número del 1 al 3\")\n",
+    "            print(\"formato incorrecto, introduce un número del 1 al 4\")\n",
     "\n",
     "    def ahorcado(self):\n",
     "        print(f\"{self.nombre}, ¿preparada para jugar al Ahorcado?\")\n",
@@ -338,13 +341,109 @@
     "                            print(f\"Has alcanzado el máximo de respuestas incorrectas. El juego ha terminado... 😓\")\n",
     "                            break  # Salimos del bucle de intentos y pasamos a la siguiente pregunta\n",
     " \n",
-    "    \n",
+    "    def tres_en_raya(self):\n",
+    "        print(f\"Hola {self.nombre}, ¿preparada para jugar al clásico TRES EN RAYA?\")\n",
+    "        print(\"-------------------------------------\")\n",
+    "        print(\"Antes de empezar, te explico las Reglas del Juego\")\n",
+    "        print(\"-------------------------------------\")\n",
+    "        print('''Reglas del juego Tres en Raya:\n",
+    "              - El juego se juega en un tablero de 3x3.\n",
+    "              - Dos jugadores, uno representa \"X\" y el otro \"O\", alternan turnos.\n",
+    "              - El objetivo es obtener tres símbolos del mismo tipo en línea horizontal, vertical o diagonal.\n",
+    "              - El juego termina cuando una jugadora gana o el tablero se llena (empate).\n",
+    "              - La jugadora que logre colocar tres de sus símbolos en línea es el ganador.\n",
+    " ''')\n",
+    "\n",
+    "        # Tablero inicial\n",
+    "        huecos_tablero = {'a1':'-', 'b1':'-', 'c1':'-', 'a2':'-', 'b2':'-', 'c2':'-', 'a3':'-', 'b3':'-', 'c3':'-'} \n",
+    "        #Lista de coordenadas válidas coordenadas_validas = ['a1', 'b1', 'c1', 'a2', 'b2', 'c2', 'a3', 'b3', 'c3']\n",
+    "        # Función para imprimir el tablero\n",
+    "        def imprimir_tablero(huecos_tablero):\n",
+    "            tablero = f'''\n",
+    "            +-----+-----+-----+\n",
+    "            |  a  |  b  |  c  |\n",
+    "        _______________________\n",
+    "        | 1 |  {huecos_tablero['a1']}  |  {huecos_tablero['b1']}  |  {huecos_tablero['c1']}  |\n",
+    "        _______________________\n",
+    "        | 2 |  {huecos_tablero['a2']}  |  {huecos_tablero['b2']}  |  {huecos_tablero['c2']}  |\n",
+    "        _______________________\n",
+    "        | 3 |  {huecos_tablero['a3']}  |  {huecos_tablero['b3']}  |  {huecos_tablero['c3']}  |\n",
+    "        +---+-----+-----+-----+\n",
+    "        '''\n",
+    "            print(tablero)\n",
+    "            \n",
+    "        # Función para comprobar si hay un ganador o empate\n",
+    "        def comprobar_ganador(huecos_tablero):\n",
+    "            # Combinaciones ganadoras\n",
+    "            combinaciones_ganadoras = [\n",
+    "                ['a1', 'b1', 'c1'], ['a2', 'b2', 'c2'], ['a3', 'b3', 'c3'],  # Filas\n",
+    "                ['a1', 'a2', 'a3'], ['b1', 'b2', 'b3'], ['c1', 'c2', 'c3'],  # Columnas\n",
+    "                ['a1', 'b2', 'c3'], ['a3', 'b2', 'c1']  # Diagonales\n",
+    "            ]\n",
+    "            # Revisamos si alguna combinación tiene el mismo valor (X o O)\n",
+    "            for combo in combinaciones_ganadoras:\n",
+    "                if huecos_tablero[combo[0]] == huecos_tablero[combo[1]] == huecos_tablero[combo[2]] and huecos_tablero[combo[0]] != '-':\n",
+    "                    return huecos_tablero[combo[0]]  # Retornamos 'X' o 'O' según quien ganó\n",
+    "            # Comprobar si hay empate\n",
+    "            if '-' not in huecos_tablero.values():\n",
+    "                return 'E'  # Empate\n",
+    "            return # No hay ganador ni empate si devuelve None   \n",
+    "\n",
+    "        # Funcion principal del juego\n",
+    "        #def juego_tic_tac_toe():\n",
+    "        while True:\n",
+    "            imprimir_tablero(huecos_tablero)\n",
+    "            \n",
+    "            # Comprobamos si hay ganador o empate antes de volver a iniciar la jugada\n",
+    "            resultado = comprobar_ganador(huecos_tablero)\n",
+    "            if resultado == \"X\":\n",
+    "                print('Ha ganado el jugador X! Enhorabuena 🎉🎉🎉')\n",
+    "                break\n",
+    "            elif resultado == \"O\":\n",
+    "                print('Ha ganado el jugador O! Enhorabuena 🎉🎉🎉')\n",
+    "                break\n",
+    "            elif resultado == \"E\":\n",
+    "                print('Empate! 😮')\n",
+    "                break\n",
+    "\n",
+    "            # Juega X \n",
+    "            coordenada_X = (input('JUGADOR X, Dime la coordenada para tu ficha')).lower()\n",
+    "            print(f\"Jugador X: {coordenada_X}\")\n",
+    "            if huecos_tablero[coordenada_X] == '-': #comprobando que el hueco está disponible\n",
+    "                print('El hueco está disponible')#si lo está, cambia '-' por X\n",
+    "                huecos_tablero[coordenada_X]= 'X'\n",
+    "                imprimir_tablero(huecos_tablero)\n",
+    "                # Comprobamos si hay ganador o empate antes de volver a iniciar la jugada\n",
+    "                resultado = comprobar_ganador(huecos_tablero)\n",
+    "                if resultado == \"X\":\n",
+    "                    print('Ha ganado el jugador X! Enhorabuena 🎉🎉🎉')\n",
+    "                    break\n",
+    "                elif resultado == \"E\":\n",
+    "                    print('Empate! 😮')\n",
+    "                    break             \n",
+    "            else:    \n",
+    "                print ('Ese hueco no está disponible. Indique otro por favor')\n",
+    "            \n",
+    "            # Hacemos un bucle interno para dar la posibilidad al jugador O de volver a meter una coordenada en caso de que se equivoque    \n",
+    "            while True:\n",
+    "                # Juega O\n",
+    "                coordenada_O = (input('JUGADOR O, Dime la coordenada para tu ficha').lower())\n",
+    "                print(f\"Jugador O: {coordenada_O}\")\n",
+    "                if huecos_tablero[coordenada_O] == '-':\n",
+    "                    print('El hueco está disponible')\n",
+    "                    huecos_tablero[coordenada_O] = 'O'\n",
+    "                    # Salimos del bucle interno para evaluar si ha ganado el jugador O, si hay empate o si el juego sigue, dando en este caso el turno al jugador X\n",
+    "                    break\n",
+    "                else:\n",
+    "                    print ('Ese hueco no está disponible. Indique otro por favor')\n",
+    "\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -382,36 +481,123 @@
       "        1 --> Si quieres jugar al AHORCADO\n",
       "        2 --> si quieres jugar a PIEDRA, PAPEL, TIJERA\n",
       "        3 --> si quieres jugar a PREGUNTAS Y RESPUESTAS \n",
-      "Hola Monty Python, ¿preparada para jugar a PIEDRA, PAPEL, TIJERA?\n",
+      "        4 --> si quieres jugar al TRES EN RAYA\n",
+      "Hola Monty Python, ¿preparada para jugar al clásico TRES EN RAYA?\n",
       "-------------------------------------\n",
       "Antes de empezar, te explico las Reglas del Juego\n",
       "-------------------------------------\n",
-      "Reglas del juego del Piedra, Papel, Tijera:\n",
-      "              \n",
-      "              - La jugadora se enfrentará contra el ordenador.\n",
-      "              - La jugadora elige una de las tres opciones: \"Piedra\", \"Papel\" o \"Tijera\". \n",
-      "              - Las reglas para determinar a la ganadora son:\n",
-      "                    * Piedra vence a Tijera.\n",
-      "                    * Tijera vence a Papel.\n",
-      "                    * Papel vence a Piedra.\n",
-      "              - La jugadora que gana una ronda obtiene un punto.\n",
-      "              - El juego continúa hasta que una jugadora haya acumulado 3 puntos, convirtiéndose en la ganadora. \n",
-      "Tu respuesta: papel\n",
-      "Respuesta ordenador: tijera\n",
-      "Has perdido esta ronda\n",
-      "Marcador: usuario: 0 - ordenador: 1\n",
-      "---------------------------------\n",
-      "Tu respuesta: papel\n",
-      "Respuesta ordenador: tijera\n",
-      "Has perdido esta ronda\n",
-      "Marcador: usuario: 0 - ordenador: 2\n",
-      "---------------------------------\n",
-      "Tu respuesta: papel\n",
-      "Respuesta ordenador: tijera\n",
-      "Has perdido esta ronda\n",
-      "Marcador: usuario: 0 - ordenador: 3\n",
-      "---------------------------------\n",
-      "Has perdido 😞\n"
+      "Reglas del juego Tres en Raya:\n",
+      "              - El juego se juega en un tablero de 3x3.\n",
+      "              - Dos jugadores, uno representa \"X\" y el otro \"O\", alternan turnos.\n",
+      "              - El objetivo es obtener tres símbolos del mismo tipo en línea horizontal, vertical o diagonal.\n",
+      "              - El juego termina cuando una jugadora gana o el tablero se llena (empate).\n",
+      "              - La jugadora que logre colocar tres de sus símbolos en línea es el ganador.\n",
+      " \n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  -  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 2 |  -  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  -  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Jugador X: a1\n",
+      "El hueco está disponible\n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  X  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 2 |  -  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  -  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Jugador O: a2\n",
+      "El hueco está disponible\n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  X  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 2 |  O  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  -  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Jugador X: b2\n",
+      "El hueco está disponible\n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  X  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 2 |  O  |  X  |  -  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  -  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Jugador O: c3\n",
+      "El hueco está disponible\n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  X  |  -  |  -  |\n",
+      "        _______________________\n",
+      "        | 2 |  O  |  X  |  -  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  O  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Jugador X: c3\n",
+      "Ese hueco no está disponible. Indique otro por favor\n",
+      "Jugador O: c1\n",
+      "El hueco está disponible\n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  X  |  -  |  O  |\n",
+      "        _______________________\n",
+      "        | 2 |  O  |  X  |  -  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  O  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Jugador X: b1\n",
+      "El hueco está disponible\n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  X  |  X  |  O  |\n",
+      "        _______________________\n",
+      "        | 2 |  O  |  X  |  -  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  O  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Jugador O: c2\n",
+      "El hueco está disponible\n",
+      "\n",
+      "            +-----+-----+-----+\n",
+      "            |  a  |  b  |  c  |\n",
+      "        _______________________\n",
+      "        | 1 |  X  |  X  |  O  |\n",
+      "        _______________________\n",
+      "        | 2 |  O  |  X  |  O  |\n",
+      "        _______________________\n",
+      "        | 3 |  -  |  -  |  O  |\n",
+      "        +---+-----+-----+-----+\n",
+      "        \n",
+      "Ha ganado el jugador O! Enhorabuena 🎉🎉🎉\n"
      ]
     }
    ],
