--- a/tres_en_raya.ipynb
+++ b/tres_en_raya.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Tablero inicial\n",
     "huecos_tablero = {'a1':'-', 'b1':'-', 'c1':'-', 'a2':'-', 'b2':'-', 'c2':'-', 'a3':'-', 'b3':'-', 'c3':'-'} \n",
-    "\n",
+    "#Lista de coordenadas válidas coordenadas_validas = ['a1', 'b1', 'c1', 'a2', 'b2', 'c2', 'a3', 'b3', 'c3']\n",
     "# Función para imprimir el tablero\n",
     "def imprimir_tablero(huecos_tablero):\n",
     "    tablero = f'''\n",
@@ -234,85 +234,6 @@
    ],
    "source": [
     "juego_tres_en_raya()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# PROBAR DESPUES\n",
-    "# Funcion que se ejecutara cada vez que haya una jugada para ver si hay algun ganador\n",
-    "def comprobar_ganador(huecos_tablero):\n",
-    "    #a1-b1-c1\n",
-    "    if huecos_tablero['a1'] and huecos_tablero['b1'] and huecos_tablero['c1']=='X':\n",
-    "        return (\"X\") # con el return salgo de la funcion y recojo valor X, O, E\n",
-    "\n",
-    "    elif huecos_tablero['a1'] and huecos_tablero['b1'] and huecos_tablero['c1']=='O':\n",
-    "        return (\"O\") \n",
-    "\n",
-    "    #a2-b2-c2\n",
-    "    elif huecos_tablero['a2'] and huecos_tablero['b2'] and huecos_tablero['c2']=='X':\n",
-    "        return (\"X\") \n",
-    "\n",
-    "    elif huecos_tablero['a2'] and huecos_tablero['b2'] and huecos_tablero['c2']=='O':\n",
-    "        return (\"O\") \n",
-    "\n",
-    "    #a3-b3-c3\n",
-    "    elif huecos_tablero['a3'] and huecos_tablero['b3'] and huecos_tablero['c3']=='X':\n",
-    "        return (\"X\") \n",
-    "\n",
-    "    elif huecos_tablero['a3'] and huecos_tablero['b3'] and huecos_tablero['c3']=='O':\n",
-    "        return (\"O\") \n",
-    "\n",
-    "    #a1-a2-a3\n",
-    "    elif huecos_tablero['a1'] and huecos_tablero['a2'] and huecos_tablero['a3']=='X':\n",
-    "        return (\"X\") \n",
-    "\n",
-    "    elif huecos_tablero['a1'] and huecos_tablero['a2'] and huecos_tablero['a3']=='O':    \n",
-    "        return (\"O\") \n",
-    "\n",
-    "    #b1-b2-b3\n",
-    "    elif huecos_tablero['b1'] and huecos_tablero['b2'] and huecos_tablero['b3']=='X':\n",
-    "        return (\"X\") \n",
-    "\n",
-    "    elif huecos_tablero['b1'] and huecos_tablero['b2'] and huecos_tablero['b3']=='O':\n",
-    "        return (\"O\") \n",
-    "\n",
-    "    #c1-c2-c3\n",
-    "    elif huecos_tablero['c1'] and huecos_tablero['c2'] and huecos_tablero['c3']=='X':\n",
-    "        return (\"X\") \n",
-    "\n",
-    "    elif huecos_tablero['c1'] and huecos_tablero['c2'] and huecos_tablero['c3']=='O':    \n",
-    "        return (\"O\") \n",
-    "\n",
-    "    #a1-b2-c3\n",
-    "    elif huecos_tablero['a1'] and huecos_tablero['b2'] and huecos_tablero['c3']=='X':\n",
-    "        return (\"X\") \n",
-    "\n",
-    "    elif huecos_tablero['a1'] and huecos_tablero['b2'] and huecos_tablero['c3']=='O':\n",
-    "        return (\"O\") \n",
-    "\n",
-    "    #a3-b2-c1\n",
-    "    elif huecos_tablero['a3'] and huecos_tablero['b2'] and huecos_tablero['c1']=='X':\n",
-    "        return (\"X\") \n",
-    "\n",
-    "    elif huecos_tablero['a3'] and huecos_tablero['b2'] and huecos_tablero['c1']=='O':\n",
-    "        return (\"O\") \n",
-    "\n",
-    "    else:\n",
-    "        # Emppate\n",
-    "        for coordenada in huecos_tablero:\n",
-    "            # Comppruebo que no haya '-' en ningun value \n",
-    "            if '-' not in huecos_tablero.values():\n",
-    "                print('Empate! 😮')\n",
-    "                return (\"E\") \n",
-    "            else: \n",
-    "                # En este caso no hay ganador ni empate\n",
-    "                return # Salgo de la funcion sin ningun valor\n",
-    "\n"
    ]
   },
   {
